fix fund name overlap in provider fund tables

--- a/src/sources/forus-platform/scss/_common/dashboard.scss
+++ b/src/sources/forus-platform/scss/_common/dashboard.scss
@@ -1439,7 +1439,6 @@ body {
 
     &.card-block-table-fund {
         .fund-img {
-            float: left;
             display: block;
             width: 24px;
             height: 24px;
